// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should not find rss 1`] = `Array []`;

exports[`should scrape a single rss 1`] = `
Array [
  Object {
    "title": "RSS",
    "url": "https://squads.khulnasoft.com/rss.xml",
  },
]
`;

exports[`should scrape a single rss with no title 1`] = `
Array [
  Object {
    "title": "RSS",
    "url": "https://squads.khulnasoft.com/rss.xml",
  },
]
`;

exports[`should scrape multiple rss 1`] = `
Array [
  Object {
    "title": "RSS",
    "url": "https://squads.khulnasoft.com/rss.xml",
  },
  Object {
    "title": "RSS2",
    "url": "https://squads.khulnasoft.com/rss2.xml",
  },
  Object {
    "title": "RSS3",
    "url": "https://squads.khulnasoft.com/rss3.xml",
  },
]
`;

exports[`should scrape multiple rss and filter feeds without title 1`] = `
Array [
  Object {
    "title": "RSS2",
    "url": "https://squads.khulnasoft.com/rss2.xml",
  },
  Object {
    "title": "RSS3",
    "url": "https://squads.khulnasoft.com/rss3.xml",
  },
]
`;

exports[`should scrape relative rss 1`] = `
Array [
  Object {
    "title": "RSS",
    "url": "http://localhost:6789/rss.xml",
  },
]
`;
